# AI-Trip-Planner

./: .env.name  main.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
agent/: agentic_workflow.py
config/: config.yaml
notebook/: experiments.ipynb
prompt_library/: prompt.py
tools/: weather_info_tool.py
utils/: config_loader.py  model_loader.py  weather_info.py
